# thunderply

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  pyproject.toml
.cursor/rules/: pythondev.mdc
backend/: requirements.txt
backend/src/adapters/inbound/api/: main.py
backend/src/adapters/inbound/api/v1/: router.py
backend/src/adapters/inbound/api/v1/endpoints/: jobs.py
backend/src/adapters/outbound/agents/cover_letter_writer/: workflow.py
backend/src/adapters/outbound/agents/cover_letter_writer/prompts/templates/: cover_letter_prompt.jinja
backend/src/adapters/outbound/agents/relevance_scorer/: workflow.py
backend/src/adapters/outbound/agents/relevance_scorer/prompts/templates/: scorer_prompt.jinja
backend/src/adapters/outbound/hiringcafe/: job_posts_repository.py  uow.py
backend/src/config/: logging.py  settings.py
backend/src/domain/: models.py  ports.py
backend/src/service_layer/: search_jobs.py
frontend/: application.html  application.js  dashboard.html  get-started.html  index.html  job.html
frontend/css/: styles.css
frontend/js/: app.js  application.js  dashboard.js  get-started.js  job.js
tests/: cover_letter_smoke_test.py  gemini_smoke_test.py
